refactoring jnuit coverage etc.
